--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     </div>
 </div>
 
+<div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasRightScrolling" aria-labelledby="offcanvasRightScrollingLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body mx-auto">
+        <p>Try scrolling the rest of the page to see this option in action.</p>
+    </div>
+</div>
+
 
 <div class="container-fluid">
     <div class="row">
