Airports now being added correctly. And handled.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
-    <div class="offcanvas-body">
-        <p>Try scrolling the rest of the page to see this option in action.</p>
+    <div class="offcanvas-body mx-auto">
+        <h1>Current Airports Selected</h1>
+        <div id="airports">
+
+        </div>
     </div>
 </div>
 
