--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body mx-auto">
-        <h1>Current Airports Selected</h1>
-        <div id="airports">
+        <h1 class="mb-3">Current Airports</h1>
+        <div id="airports" class="mx-auto">
+
+        </div>
+        <h1 class="mt-3 mb-3">Airplanes Selected</h1>
+        <div id="selectedAirplanes">
 
         </div>
     </div>
