--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
 <body>
 <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body mx-auto">
         <h1 class="mb-3">Current Airports</h1>
         <div id="airports" class="mx-auto">
-
+            <!-- Airports will be added here -->
         </div>
         <h1 class="mt-3 mb-3">Airplanes Selected</h1>
         <div id="selectedAirplanes">
-
+            <!-- Airplane will be added here -->
+        </div>
+        <div id="cost">
+            <!-- Cost will be added here -->
         </div>
     </div>
 </div>
 
 <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasRightScrolling" aria-labelledby="offcanvasRightScrollingLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body mx-auto">
-        <p>Try scrolling the rest of the page to see this option in action.</p>
+        <!-- Airplanes will be added here -->
     </div>
 </div>
 
